<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nooz_app.nooz.MapActivity" >

    <item
        android:id="@+id/action_search"
        android:enabled="false"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>

    <item
        android:id="@+id/action_profile"
        android:showAsAction="never"
        android:title="@string/action_profile"/>

    <item
        android:id="@+id/action_map_filters"
        android:showAsAction="never"
        android:title="@string/action_map_filters"/>

    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
